@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   155: AstroFloyd, 23/03/2011
+     - Added intent statements and Doxygen comments
+     
    154: AstroFloyd, 23/03/2011
      - Minor updates
      
